istio-authorization/authorizationpolicy-invoker.tmpl.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START run_gke_invoker_authorizationpolicy_invoker]
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-jwt
  namespace: tutorial
spec:
  action: ALLOW
  rules:
  - when:
    - key: request.auth.audiences
      values:
      - http://example.com
    - key: request.auth.claims[iss]
      values:
      - https://accounts.google.com
    - key: request.auth.principal
      values:
      - $SERVICE_ACCOUNT_EMAIL
# [END run_gke_invoker_authorizationpolicy_invoker]
